--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@subalouis</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
         <h1>Louis Andrei Suba</h1>
-        <h2>
-            <li>
-                
+        <h2>   
                     A programmer.
                     Designer.
                     Using and Empowering tech for the Common Good.
-            </li>
     </h2>
         
 
