--- a/index.html
+++ b/index.html
@@ -13,19 +13,14 @@
 
 <body>
   
-
-
     <div class="main">
         <h1>Louis Andrei Suba📸</h1>
-            <h2>   
-                    A <b><i>Computer Science Student</i>👩‍💻.</b> <br>
-                    A <b>UI/UX Designer🎨.</b><br>
-                    Using and Empowering <b>tech for the <i>Common Good.</i>💛</b>
+            <h2>  
+                <li> A <b><i>Computer Science Student</i>👩‍💻.</b> <br>
+                    <li>  A <b>UI/UX Designer🎨.</b><br>
+                        <li>  Using and Empowering <b>tech for the <i>Common Good.</i>💛</b>
      
-            <img src="/pics/DSC_0096.png" alt="mypic" id="avatar">    
-            <img src="/pics/planets/SVG/SVG/Asset 6.svg" style="width: 12%; position: absolute; right: 10%; top: 50%;">
-            <img src="/pics/planets/SVG/SVG/Asset 5.svg" style="width: 13%; position: absolute; right: 20%; top: 55%;" alt=""> 
-            <img src="/pics/planets/SVG/SVG/Asset 7.svg" style="width: 8%; position: absolute; right: 7%; top: 10%;" alt="">  
+          <img src="" alt=""> 
     </div>
     <div class="midbar">
         <h1>
